REMOVED SPONSORSHIP PAGE

--- a/speakers.html
+++ b/speakers.html
@@ -71,7 +71,7 @@
             </ul>
           </li>
         
-          <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Sponsor</a></li>
+          <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Sponsor</a></li> -->
           <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 rounded-0" href="./register.html">REGISTER</a></li>
 
         </ul>
