--- a/sponsors-partners.html
+++ b/sponsors-partners.html
@@ -65,13 +65,15 @@
           <li class="dropdown"><a href="#"><span>Forum</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./agenda.html">Agenda</a></li>
-              <!-- <li><a href="./speakers.html">Speakers</a></li> -->
+              <li><a href="./speakers.html">Speakers</a></li>
               <!-- <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
         
-          <li><a class="nav-link scrollto btn btn-primary text-white px-lg-3 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Sponsor</a></li>
+          <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-3 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Sponsor</a></li> -->
+          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 rounded-0" href="./register.html">REGISTER</a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
