--- a/agenda.html
+++ b/agenda.html
@@ -73,7 +73,7 @@
           </li>
         
           <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Sponsor</a></li> -->
-          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 rounded-0" href="./register.html">REGISTER</a></li>
+          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./register.html">REGISTER</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -377,11 +377,11 @@
 
     <div class="footer-newsletter">
       <div class="container">
-        <h4 class="text-center">About CARISCA</h4>
-        <p><a href="https://carisca.knust.edu.gh/" target="_blank">CARISCA</a> works in four focus areas: <a href="https://carisca.knust.edu.gh/component-1-research/">research</a>, <a href="https://carisca.knust.edu.gh/component-2-stakeholder-engagement/">stakeholder engagement</a>, <a href="https://carisca.knust.edu.gh/curricula-training/">curriculum</a>, and <a href="https://carisca.knust.edu.gh/access-inclusion/">access and inclusion</a>.</p>
-        <p>Together, these activities enable KNUST to increase research capacity, strengthen and update supply chain curricula, and provide supply chain management expertise to Ghana and Africa.</p>
-        <p>These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p>
-      </div>
+            <h4 class="text-center fs-2">About CARISCA</h4>
+            <p class="fs-4"><a href="https://carisca.knust.edu.gh/" target="_blank">CARISCA</a> works in four focus areas: <a href="https://carisca.knust.edu.gh/component-1-research/">research</a>, <a href="https://carisca.knust.edu.gh/component-2-stakeholder-engagement/">stakeholder engagement</a>, <a href="https://carisca.knust.edu.gh/curricula-training/">curriculum</a>, and <a href="https://carisca.knust.edu.gh/access-inclusion/">access and inclusion</a>.</p>
+            <p class="fs-4">Together, these activities enable KNUST to increase research capacity, strengthen and update supply chain curricula, and provide supply chain management expertise to Ghana and Africa.</p>
+            <p class="fs-4">These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p>
+          </div>
     </div>
 
     <div class="footer-top">
