--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
           </li>
         
           <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Exhibit</a></li> -->
-          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 rounded-0" href="./register.html">REGISTER</a></li>
+          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./register.html">REGISTER</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -238,7 +238,7 @@
 
     <section>
         <div class="container">
-            <ul class="nav nav-tabs nav-tabs-custom nav-success nav-justified mb-3" id="myTab" role="tablist">
+            <ul class="nav nav-tabs bg-light pt-4" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Exhibitor/Partner/Sponsor</button>
                 </li>
@@ -250,7 +250,7 @@
                   <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Contact</button>
                 </li> -->
               </ul>
-              <div class="tab-content" id="myTabContent">
+              <div class="tab-content mt-5" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <p>If you are an exhibitor, partner or sponsor <a href="./sponsors.html">click here</a> to access the CARISCA Business Forum Exhibitor & Partner Registration System.</p>
                 </div>
@@ -269,13 +269,13 @@
   <footer id="footer">
 
     <div class="footer-newsletter">
-      <div class="container">
-        <h4 class="text-center">About CARISCA</h4>
-        <p><a href="https://carisca.knust.edu.gh/" target="_blank">CARISCA</a> works in four focus areas: <a href="https://carisca.knust.edu.gh/component-1-research/">research</a>, <a href="https://carisca.knust.edu.gh/component-2-stakeholder-engagement/">stakeholder engagement</a>, <a href="https://carisca.knust.edu.gh/curricula-training/">curriculum</a>, and <a href="https://carisca.knust.edu.gh/access-inclusion/">access and inclusion</a>.</p>
-        <p>Together, these activities enable KNUST to increase research capacity, strengthen and update supply chain curricula, and provide supply chain management expertise to Ghana and Africa.</p>
-        <p>These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p>
+        <div class="container">
+              <h4 class="text-center fs-2">About CARISCA</h4>
+              <p class="fs-4"><a href="https://carisca.knust.edu.gh/" target="_blank">CARISCA</a> works in four focus areas: <a href="https://carisca.knust.edu.gh/component-1-research/">research</a>, <a href="https://carisca.knust.edu.gh/component-2-stakeholder-engagement/">stakeholder engagement</a>, <a href="https://carisca.knust.edu.gh/curricula-training/">curriculum</a>, and <a href="https://carisca.knust.edu.gh/access-inclusion/">access and inclusion</a>.</p>
+              <p class="fs-4">Together, these activities enable KNUST to increase research capacity, strengthen and update supply chain curricula, and provide supply chain management expertise to Ghana and Africa.</p>
+              <p class="fs-4">These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p>
+            </div>
       </div>
-    </div>
 
     <div class="footer-top">
       <div class="container">
