--- a/sponsors.html
+++ b/sponsors.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CARISCA Buisness Forum - Navigating the Future of Supply Chains in Africa</title>
+  <title>CARISCA Business Forum - Navigating the Future of Supply Chains in Africa</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,8 +71,8 @@
             </ul>
           </li>
         
-          <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Exhibit</a></li> -->
-          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./register.html">REGISTER</a></li>
+          <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Exhibit</a></li>
+          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 mt-md-0 mt-3" href="./register.html">REGISTER FOR FREE</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
