ADDED BIO TO SPEAKERS

--- a/sponsors.html
+++ b/sponsors.html
@@ -303,63 +303,63 @@
           <p class="fw-light">Send us your details and we’ll show you options that best fit your goals.</p>
         </div>
 
-        <form action="" class="w-lg-50 mx-auto p-5 border">
+        <form  action="https://formspree.io/f/xwkdgazb" method="POST" class="w-lg-50 mx-auto p-5 border">
           <div class="row">
             <div class="col-lg-6">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">First Name</label>
-                <input type="text" name="firstname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="first_name" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-lg-0 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Last Name</label>
-                <input type="text" name="lastname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="last_name" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Job Title</label>
-                <input type="text" name="firstname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="job_title" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Email</label>
-                <input type="text" name="lastname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="email" name="email" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Company Name</label>
-                <input type="text" name="firstname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="company_name" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Industry</label>
-                <input type="text" name="lastname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="industry" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Mobile Number</label>
-                <input type="text" name="firstname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="mobile_number" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Country/Region</label>
-                <input type="text" name="lastname" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <input type="text" name="country" id="" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
             <div class="col mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">What is your enquiry?</label>
-                <select name="" id="" class="form-control rounded-0">
+                <select name="enquiry" id="" class="form-control rounded-0">
                   <option value="" class="disable">---Please select---</option>
-                  <option value="">Sponsorship</option>
-                  <option value="">Exhibition</option>
+                  <option value="sponsorship">Sponsorship</option>
+                  <option value="exhibition">Exhibition</option>
                   <!-- <option value="">Meeting Room</option>
                   <option value="">Hospitality</option>
                   <option value="">Other</option> -->
@@ -370,7 +370,7 @@
             <div class="mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Enter your Question/Comment here:</label>
-               <textarea name="" class="form-control rounded-0" id="" cols="30" rows="10" style="height: 5rem;"></textarea>
+               <textarea name="comment" class="form-control rounded-0" id="" cols="30" rows="10" style="height: 5rem;"></textarea>
               </div>
             </div>
             <div class="mt-4">
