--- a/sponsors.html
+++ b/sponsors.html
@@ -360,7 +360,7 @@
             <div class="col mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">What is your enquiry?<span class="text-danger opacity-75">*</span></label>
-                <select name="enquiry" id="enquiry" class="form-control rounded-0">
+                <select name="enquiry" id="enquiry" class="form-control rounded-0 py-2">
                   <option value="" class="disable">---Please select---</option>
                   <option value="sponsorship">Sponsorship</option>
                   <option value="exhibition">Exhibition</option>
