--- a/thanks.html
+++ b/thanks.html
@@ -39,18 +39,16 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <section id="topbar" class="d-flex align-items-center">
+   <!-- ======= Top Bar ======= -->
+   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">ankomahjnr@carisca.knust.edu.gh</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+233 24-469-2953</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.facebook.com/carisca.supply.chain" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/company/carisca/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
   </section>
@@ -59,25 +57,31 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <h1 class="logo"><a href="index.html">BizLand<span>.</span></a></h1> -->
+      <!-- <h1 class="logo"><a href="index.html"><img src="./assets/img/logo.webp" alt=""><span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="./assets/img/logo.webp" alt=""></a>
+      <a href="index.html" class="logo"><img src="assets/img/logo.webp" alt="logo"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#about">About</a></li>
+          <!-- <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link scrollto" href="#team">Speakers</a></li>
+          <li class="dropdown"><a href="#"><span>Forum</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./agenda.html">Agenda</a></li>
+              <li><a href="./speakers.html">Speakers</a></li>
+              <!-- <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li> -->
+            </ul>
+          </li>
         
-          <!-- <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="#contact" style="background-color: rgb(15, 59, 143);">Sponsor</a></li> -->
-          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./register.html">REGISTER</a></li>
+          <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">Exhibit</a></li>
+          <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 mt-md-0 mt-3" href="./register.html">REGISTER FOR FREE</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
 
     </div>
   </header><!-- End Header -->
