--- a/thanks.html
+++ b/thanks.html
@@ -110,32 +110,29 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <!-- <div class="footer-newsletter">
+    <div class="footer-newsletter">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+            <h4 class="text-center fs-2">About CARISCA</h4>
+            <p class="fs-4"><a href="https://carisca.knust.edu.gh/" target="_blank">CARISCA</a> works in four focus areas: <a href="https://carisca.knust.edu.gh/component-1-research/">research</a>, <a href="https://carisca.knust.edu.gh/component-2-stakeholder-engagement/">stakeholder engagement</a>, <a href="https://carisca.knust.edu.gh/curricula-training/">curriculum</a>, and <a href="https://carisca.knust.edu.gh/access-inclusion/">access and inclusion</a>.</p>
+            <p class="fs-4">Together, these activities enable KNUST to increase research capacity, strengthen and update supply chain curricula, and provide supply chain management expertise to Ghana and Africa.</p>
+            <p class="fs-4">These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p>
           </div>
-        </div>
-      </div>
-    </div> -->
+    </div>
 
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>BizLand<span>.</span></h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <h3>CARISCA<span>.</span></h3>
+              <p>
+              KNUST School of Business
+
+              <br>
+              Postgraduate Block E<br>
+              Second Floor  <br><br>
+              <strong>Phone:</strong> +233 24-469-2953<br>
+              <strong>Email:</strong> ankomahjnr@carisca.knust.edu.gh<br>
             </p>
           </div>
 
@@ -143,32 +140,32 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Agenda</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Speakers</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sponsor or Exhibit</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Program</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Speakers</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sponsor or Exhibit</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Follow us on all social media</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+              <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
@@ -177,17 +174,11 @@
       </div>
     </div>
 
-    <div class="container py-4">
-      <div class="copyright">
-        &copy; Copyright <strong><span>BizLand</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bizland-bootstrap-business-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+    <div class="container py-4 flex justify-content-center align-items-center">
+     <img src="./assets/img/trilogo1.jpg" class="mx-auto d-block footer-img" alt="" style="mix-blend-mode: darken;">
+     <p class="text-center mt-4"> &copy; Copyright <strong><span>CARISCA, KNUST</span></strong>. All Rights Reserved</p>
+    </div>
+   
     </div>
   </footer><!-- End Footer -->
 
