REMOVED SPEAKERS AND ADDED SOME NEW CHANGES

--- a/program.html
+++ b/program.html
@@ -63,15 +63,14 @@
           <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li>
           <!-- <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-          <li class="dropdown"><a href="#" class="active"><span>FORUM</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="./program.html">PROGRAM</a></li>
+          <!-- <li class="dropdown"><a href="#" class="active"><span>FORUM</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./program.html">PROGRAM</a></li>
               <li><a href="./speakers.html">SPEAKERS</a></li>
-              <!-- <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li> -->
+              
             </ul>
           </li>
-        
+         -->
           <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">EXHIBIT</a></li>
           <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 mt-md-0 mt-3" href="./register.html">REGISTER TO ATTEND</a></li>
 
