--- a/index.html
+++ b/index.html
@@ -65,14 +65,13 @@
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Speakers</a></li> -->
-          <li class="dropdown"><a href="#"><span>FORUM</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="./program.html">PROGRAM</a></li>
+          <!-- <li class="dropdown"><a href="#"><span>FORUM</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./program.html">PROGRAM</a></li>
               <li><a href="./speakers.html">SPEAKERS</a></li>
-              <!-- <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li> -->
+             
             </ul>
-          </li>
+          </li> -->
           <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">EXHIBIT</a></li>
           <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 mt-md-0 mt-3" href="./register.html">REGISTER TO ATTEND</a></li>
         </ul>
@@ -633,12 +632,13 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/cariscabusinessforum.appspot.com/o/team-1.jpg?alt=media&token=73ce4297-a99a-419f-9a0e-efdc8821aa62" class="img-fluid" alt="">
+                <img src="https://firebasestorage.googleapis.com/v0/b/cariscabusinessforum.appspot.com/o/team-1.jpg?alt=media&token=e1ae986b-a823-4a34-bf99-9379e2479feb" class="img-fluid" alt="">
                
               </div>
               <div class="member-info" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">
                 <h4>Ruby Amegah</h4>
-                <span>VP, Starbucks</span>
+                <span class="">Vice President of Global Food Product R&D, Starbucks</span>
+                <p class="font-italic">"The Odyssey of Coffee and Cocoa Beans- From African soil to Global Cup"</p>
               </div>
             </div>
           </div>
