MADE CHANGES IN REGISTER PAGE AND SPONSOR PAGE

--- a/register.html
+++ b/register.html
@@ -112,9 +112,9 @@
     <section id="sponsor" class="team text-white" style="background-color: #090329;">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="section-title text-center w-75 mx-auto">
           <!-- <h2>Register</h2> -->
-          <h3 class="">Registration for the <span>FORUM is absolutely FREE!</span> To secure your spot, simply register below</h3>
+          <h3 class="fs-4 ">Explore the future of supply chains in Africa at the CARISCA Business Forum. Join industry leaders, experts, and professionals for insightful discussions and networking opportunities.  Registration for the forum is completely free! To reserve your spot, please register below. Attendance costs are covered by CARISCA</h3>
           <!-- <p class="fw-light">Send us your details and we’ll show you options that best fit your goals.</p> -->
         </div>
 
@@ -237,14 +237,14 @@
               </div>
             </div>
 
-            <div class="col-lg-6 mt-4 d-none" id="specify_sector">
+            <div class="col-lg-6 mt-4 d-none" id="specify_sector" data-aos="fade-up">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Specify Sector<span class="text-danger opacity-75">*</span></label>
                 <input type="text" name="specify_sector" id="specify_sector" class="py-2 px-3 mt-2 form-control rounded-0" required>
               </div>
             </div>
 
-            <div class="col-lg-6 mt-4 d-none" id="specify_role">
+            <div class="col-lg-6 mt-4 d-none" id="specify_role" data-aos="fade-up">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Specify Role<span class="text-danger opacity-75">*</span></label>
                 <input type="text" name="specify_role" id="specify_role" class="py-2 px-3 mt-2 form-control rounded-0" required>
