--- a/register.html
+++ b/register.html
@@ -114,7 +114,7 @@
 
         <div class="section-title text-center w-75 mx-auto">
           <!-- <h2>Register</h2> -->
-          <h3 class="fs-4 ">Explore the future of supply chains in Africa at the CARISCA Business Forum. Join industry leaders, experts, and professionals for insightful discussions and networking opportunities.  Registration for the forum is completely free! To reserve your spot, please register below. Attendance costs are covered by CARISCA</h3>
+          <h3 class="fs-4 ">Registration for the forum is <span>completely free!</span> To reserve your spot, please register below. Attendance costs are covered by <span>CARISCA</span>.</h3>
           <!-- <p class="fw-light">Send us your details and we’ll show you options that best fit your goals.</p> -->
         </div>
 
