SUBMIT TO REGISTER

--- a/register.html
+++ b/register.html
@@ -256,7 +256,7 @@
            
             <div class="d-flex justify-content-center">
 
-              <button type="button" id="submit" class="mx-auto text-white btn btn-primary rounded-0 px-5 py-3 w-lg-0" style="">SUBMIT</button>
+              <button type="button" id="submit" class="mx-auto text-white btn btn-primary rounded-0 px-5 py-3 w-lg-0" style="">REGISTER</button>
             </div>
           </div>
           </div>
